// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tui-stories CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > invalid width 1`] = `
{
  "signal": null,
  "status": 1,
  "stderr": "
ERROR
  Invalid value for flag --width: "nope". Expected a string representing a finite number
TypeError: Attempted to assign to readonly property.
    at assign (unknown)
    at ~effect/Utils/internal (/home/schickling/.megarepo/github.com/overengineeringstudio/effect-utils/refs/heads/schickling/2026-08-23-effect-4/node_modules/.pnpm/effect@4.0.0-rc.111/node_modules/effect/dist/Utils.js:85:16)
    at <anonymous> (/home/schickling/.megarepo/github.com/overengineeringstudio/effect-utils/refs/heads/schickling/2026-08-23-effect-4/node_modules/.pnpm/effect@4.0.0-rc.111/node_modules/effect/dist/internal/effect.js:721:53)
    at runLoop (/home/schickling/.megarepo/github.com/overengineeringstudio/effect-utils/refs/heads/schickling/2026-08-23-effect-4/node_modules/.pnpm/effect@4.0.0-rc.111/node_modules/effect/dist/internal/effect.js:462:98)
    at evaluate (/home/schickling/.megarepo/github.com/overengineeringstudio/effect-utils/refs/heads/schickling/2026-08-23-effect-4/node_modules/.pnpm/effect@4.0.0-rc.111/node_modules/effect/dist/internal/effect.js:422:23)
    at <anonymous> (/home/schickling/.megarepo/github.com/overengineeringstudio/effect-utils/refs/heads/schickling/2026-08-23-effect-4/node_modules/.pnpm/effect@4.0.0-rc.111/node_modules/effect/dist/internal/effect.js:2263:9)
    at <anonymous> (/home/schickling/.megarepo/github.com/overengineeringstudio/effect-utils/refs/heads/schickling/2026-08-23-effect-4/node_modules/.pnpm/effect@4.0.0-rc.111/node_modules/effect/dist/Runtime.js:130:66)
    at runTuiMainImpl (/home/schickling/.megarepo/github.com/overengineeringstudio/effect-utils/refs/heads/schickling/2026-08-23-effect-4/packages/@overeng/tui-react/src/effect/cli.tsx:357:10)
    at /home/schickling/.megarepo/github.com/overengineeringstudio/effect-utils/refs/heads/schickling/2026-08-23-effect-4/packages/@overeng/tui-stories/bin/tui-stories.tsx:22:99
    at asyncModuleEvaluation (native:2)
    at processTicksAndRejections (native:7:39)
",
  "stdout": "DESCRIPTION
  Render a story to terminal output

USAGE
  tui-stories render [flags] <story-id>

ARGUMENTS
  story-id string    Story title or ID to render (supports prefix/substring match)

FLAGS
  --story, -s string     Named story export to render (defaults to first)
  --path string          Package directory to search for stories
  --width, -w integer    Terminal width for layout
  --output, -o choice    Output mode: auto, tty, alt-screen, ci, ci-plain, log, json, ndjson (choices: auto, tty, alt-screen, ci, ci-plain, log, json, ndjson)
  --final                Apply all timeline events (show final state)
  --at integer           Apply timeline events up to this timestamp (ms)
  --arg, -a string       Override story arg (key=value format, repeatable)

GLOBAL FLAGS
  --help, -h                                                          Show help information
  --version, -v                                                       Show version information
  --wizard                                                            Start wizard mode for a command
  --completions <bash|zsh|fish|sh>                                    Print shell completion script (choices: bash, zsh, fish, sh)
  --log-level <all|trace|debug|info|warn|warning|error|fatal|none>    Sets the minimum log level (choices: all, trace, debug, info, warn, warning, error, fatal, none)
",
}
`;

exports[`tui-stories CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > list help 1`] = `
{
  "signal": null,
  "status": 0,
  "stderr": "",
  "stdout": "DESCRIPTION
  List all discovered stories

USAGE
  tui-stories list [flags]

FLAGS
  --path string          Package directory to search for stories
  --output, -o choice    Output mode: auto, tty, alt-screen, ci, ci-plain, log, json, ndjson (choices: auto, tty, alt-screen, ci, ci-plain, log, json, ndjson)

GLOBAL FLAGS
  --help, -h                                                          Show help information
  --version, -v                                                       Show version information
  --wizard                                                            Start wizard mode for a command
  --completions <bash|zsh|fish|sh>                                    Print shell completion script (choices: bash, zsh, fish, sh)
  --log-level <all|trace|debug|info|warn|warning|error|fatal|none>    Sets the minimum log level (choices: all, trace, debug, info, warn, warning, error, fatal, none)
",
}
`;

exports[`tui-stories CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > missing path 1`] = `
{
  "signal": null,
  "status": 1,
  "stderr": "
ERROR
  Missing required flag: --path
TypeError: Attempted to assign to readonly property.
    at assign (unknown)
    at ~effect/Utils/internal (/home/schickling/.megarepo/github.com/overengineeringstudio/effect-utils/refs/heads/schickling/2026-08-23-effect-4/node_modules/.pnpm/effect@4.0.0-rc.111/node_modules/effect/dist/Utils.js:85:16)
    at <anonymous> (/home/schickling/.megarepo/github.com/overengineeringstudio/effect-utils/refs/heads/schickling/2026-08-23-effect-4/node_modules/.pnpm/effect@4.0.0-rc.111/node_modules/effect/dist/internal/effect.js:721:53)
    at runLoop (/home/schickling/.megarepo/github.com/overengineeringstudio/effect-utils/refs/heads/schickling/2026-08-23-effect-4/node_modules/.pnpm/effect@4.0.0-rc.111/node_modules/effect/dist/internal/effect.js:462:98)
    at evaluate (/home/schickling/.megarepo/github.com/overengineeringstudio/effect-utils/refs/heads/schickling/2026-08-23-effect-4/node_modules/.pnpm/effect@4.0.0-rc.111/node_modules/effect/dist/internal/effect.js:422:23)
    at <anonymous> (/home/schickling/.megarepo/github.com/overengineeringstudio/effect-utils/refs/heads/schickling/2026-08-23-effect-4/node_modules/.pnpm/effect@4.0.0-rc.111/node_modules/effect/dist/internal/effect.js:2263:9)
    at <anonymous> (/home/schickling/.megarepo/github.com/overengineeringstudio/effect-utils/refs/heads/schickling/2026-08-23-effect-4/node_modules/.pnpm/effect@4.0.0-rc.111/node_modules/effect/dist/Runtime.js:130:66)
    at runTuiMainImpl (/home/schickling/.megarepo/github.com/overengineeringstudio/effect-utils/refs/heads/schickling/2026-08-23-effect-4/packages/@overeng/tui-react/src/effect/cli.tsx:357:10)
    at /home/schickling/.megarepo/github.com/overengineeringstudio/effect-utils/refs/heads/schickling/2026-08-23-effect-4/packages/@overeng/tui-stories/bin/tui-stories.tsx:22:99
    at asyncModuleEvaluation (native:2)
    at processTicksAndRejections (native:7:39)
",
  "stdout": "DESCRIPTION
  List all discovered stories

USAGE
  tui-stories list [flags]

FLAGS
  --path string          Package directory to search for stories
  --output, -o choice    Output mode: auto, tty, alt-screen, ci, ci-plain, log, json, ndjson (choices: auto, tty, alt-screen, ci, ci-plain, log, json, ndjson)

GLOBAL FLAGS
  --help, -h                                                          Show help information
  --version, -v                                                       Show version information
  --wizard                                                            Start wizard mode for a command
  --completions <bash|zsh|fish|sh>                                    Print shell completion script (choices: bash, zsh, fish, sh)
  --log-level <all|trace|debug|info|warn|warning|error|fatal|none>    Sets the minimum log level (choices: all, trace, debug, info, warn, warning, error, fatal, none)
",
}
`;

exports[`tui-stories CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > root help 1`] = `
{
  "signal": null,
  "status": 0,
  "stderr": "",
  "stdout": "DESCRIPTION
  Headless TUI story runner — render Storybook stories in the terminal

USAGE
  tui-stories <subcommand> [flags]

GLOBAL FLAGS
  --help, -h                                                          Show help information
  --version, -v                                                       Show version information
  --wizard                                                            Start wizard mode for a command
  --completions <bash|zsh|fish|sh>                                    Print shell completion script (choices: bash, zsh, fish, sh)
  --log-level <all|trace|debug|info|warn|warning|error|fatal|none>    Sets the minimum log level (choices: all, trace, debug, info, warn, warning, error, fatal, none)

SUBCOMMANDS
  list       List all discovered stories
  render     Render a story to terminal output
  inspect    Inspect story metadata and available args
",
}
`;

exports[`tui-stories CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > version 1`] = `
{
  "signal": null,
  "status": 0,
  "stderr": "",
  "stdout": "tui-stories v0.1.0
",
}
`;
